[tool.poetry]
name = "DQNTicTacToe"
version = "0.1.0"
description = ""
authors = ["Javier Matas <javiermatasjr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
flask = "3.1.0"
gymnasium = "1.0.0"
numpy = "2.1.3"
torch = "2.5.1"

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
